ch7/istio/istio-auth.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication               
metadata:
  name: require-mtls
  namespace: default
spec:
  mtls:
    mode: STRICT

---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy              
metadata:
  name: allow-nothing
  namespace: default
spec:
  {}
